# serializer version: 1
# name: test_diagnostics_no_gas_today
  dict({
    'energy': dict({
      'average_price': 0.22800608695652172,
      'current_hour_price': 0.234791425,
      'highest_price_time': '2025-12-21T08:00:00+00:00',
      'hours_priced_equal_or_lower': 15,
      'lowest_price_time': '2025-12-21T22:00:00+00:00',
      'max_price': 0.244719475,
      'min_price': 0.20865845,
      'next_hour_price': 0.23535105,
      'percentage_of_max': 95.94,
    }),
    'entry': dict({
      'title': 'energy',
    }),
    'gas': dict({
      'current_hour_price': None,
      'next_hour_price': None,
    }),
  })
# ---
# name: test_entry_diagnostics
  dict({
    'energy': dict({
      'average_price': 0.22800608695652172,
      'current_hour_price': 0.234791425,
      'highest_price_time': '2025-12-21T08:00:00+00:00',
      'hours_priced_equal_or_lower': 15,
      'lowest_price_time': '2025-12-21T22:00:00+00:00',
      'max_price': 0.244719475,
      'min_price': 0.20865845,
      'next_hour_price': 0.23535105,
      'percentage_of_max': 95.94,
    }),
    'entry': dict({
      'title': 'energy',
    }),
    'gas': dict({
      'current_hour_price': 1.03089335148272,
      'next_hour_price': 1.03089335148272,
    }),
  })
# ---
